# pohudenie

./: README.md  pyproject.toml
app/weight_helper/: consts.py  lost_weight.py  lost_weight_protocol.py  my_types.py
