[tool.poetry]
name = "pohudenie"
version = "0.1.0"
description = ""
authors = ["jukplavunec <glebasiq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
ruff = "^0.3.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
